[package]
name = "rhiaqey-producers"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
panic = 'abort'     # Abort on panic
overflow-checks = true
codegen-units = 1

[workspace]
members = [
    "crates/rhiaqey-producer-ecb",
    "crates/rhiaqey-producer-iss",
    "crates/rhiaqey-producer-pinger",
    "crates/rhiaqey-producer-rss",
    "crates/rhiaqey-producer-ticker",
    "crates/rhiaqey-producer-yahoo",
    "crates/rhiaqey-producer-ctrader-fix"
]

[workspace.package]
version = "0.1.101"
edition = "2021"

[workspace.dependencies]
rhiaqey-sdk-rs = { git = "https://github.com/rhiaqey/sdk-rs.git" }
rhiaqey-common = { git = "https://github.com/rhiaqey/common.git" }
tokio = { version = "1.39", features = ["full", "rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
env_logger = { version = "0.11" }
log = { version = "0.4" }
anyhow = { version = "1.0" }
lazy_static = "1.5"

[dependencies]
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
rhiaqey-producer-ticker = { path = "crates/rhiaqey-producer-ticker", optional = true }
rhiaqey-producer-pinger = { path = "crates/rhiaqey-producer-pinger", optional = true }
rhiaqey-producer-ecb = { path = "crates/rhiaqey-producer-ecb", optional = true }
rhiaqey-producer-rss = { path = "crates/rhiaqey-producer-rss", optional = true }
rhiaqey-producer-iss = { path = "crates/rhiaqey-producer-iss", optional = true }
rhiaqey-producer-yahoo = { path = "crates/rhiaqey-producer-yahoo", optional = true }
rhiaqey-producer-ctrader-fix = { path = "crates/rhiaqey-producer-ctrader-fix", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
prometheus = { version = "0.13", features = ["process"] }
futures = { version = "0.3" }
rustis = { version = "0.13", features = ["redis-json", "tokio-runtime"] }
redis = { version = "0.25", features = ["tokio-comp", "sentinel"] }
axum = { version = "0.7" }
hyper = { version = "1.4", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

[features]
yahoo = ["rhiaqey-producer-yahoo"]
iss-position = ["rhiaqey-producer-iss"]
iss-astros = ["rhiaqey-producer-iss"]
ticker = ["rhiaqey-producer-ticker"]
pinger = ["rhiaqey-producer-pinger"]
rss = ["rhiaqey-producer-rss"]
ecb-daily = ["rhiaqey-producer-ecb"]
ctrader-fix = ["rhiaqey-producer-ctrader-fix"]

[[bin]]
name = "ctrader-fix"
src = "src/bin/ctrader-fix.rs"
required-features = ["ctrader-fix"]

[[bin]]
name = "yahoo"
src = "src/bin/yahoo.rs"
required-features = ["yahoo"]

[[bin]]
name = "iss-position"
src = "src/bin/iss-position.rs"
required-features = ["iss-position"]

[[bin]]
name = "iss-astros"
src = "src/bin/iss-astros.rs"
required-features = ["iss-astros"]

[[bin]]
name = "ticker"
src = "src/bin/ticker.rs"
required-features = ["ticker"]

[[bin]]
name = "pinger"
src = "src/bin/pinger.rs"
required-features = ["pinger"]

[[bin]]
name = "rss"
src = "src/bin/rss.rs"
required-features = ["rss"]

[[bin]]
name = "ecb-daily"
src = "src/bin/ecb-daily.rs"
required-features = ["ecb-daily"]
