[package]
name = "rhiaqey-producer-ctrader-fix"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
fefixs = { git = "https://github.com/ferrumfix/ferrumfix" }
quickfix = "0.1.4"
serde = { version = "1.0.202", features = ["derive"] }
