[package]
name = "rhiaqey-producer-ctrader-fix"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
futures = { version = "0.3" }
quickfix = "0.1"
fefix = { version = "0.7", features = ["codegen"] }

[build-dependencies]
fefix = { version = "0.7", features = ["codegen"] }
