[package]
name = "rhiaqey-producer-ctrader-fix"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
quickfix = "0.1"
quickfix-msg44 = "0.2"
