[package]
name = "rhiaqey-producer-ecb"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib", "cdylib"]

[dependencies]
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
reqwest = { version = "0.12" }
sha256 = { version = "1.5" }
chrono = { version = "0.4" }
quick-xml = { version = "0.36", features = ["async-tokio", "serialize", "encoding"] }
futures = { version = "0.3" }
