[package]
name = "rhiaqey-producer-yahoo"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib", "cdylib"]

[dependencies]
rhiaqey-sdk-rs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
futures = { version = "0.3" }
base64 = { version = "0.22" }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
prost = "0.14"

[build-dependencies]
prost-build = { version = "0.14" }
