[package]
name = "rhiaqey-producer-iss"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
codegen-units = 1

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
sha256 = { version = "1.5" }
reqwest = { version = "0.12" }
futures = { version = "0.3" }
