[package]
name = "rhiaqey-producer-pinger"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
codegen-units = 1

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib", "cdylib"]

[dependencies]
async-trait = "0.1"
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.37", features = ["full", "rt", "rt-multi-thread"] }
