[package]
name = "rhiaqey-producer-ticker"
version = "0.1.0"
edition = "2021"

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
codegen-units = 1

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib", "cdylib"]
name = "_rhiaqey_producer_ticker"

[dependencies]
async-trait = "0.1"
rhiaqey-sdk-rs = { git = "https://github.com/rhiaqey/sdk-rs.git" }
rhiaqey-common = { git = "https://github.com/rhiaqey/common.git", features = ["reqwest", "rss", "quick-xml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.37", features = ["full", "rt", "rt-multi-thread"] }
